--- a/scripts/apps/users/styles/users.scss
+++ b/scripts/apps/users/styles/users.scss
@@ -11,6 +11,9 @@
             float: left;
         }
     }
+    #user-filter {
+        margin: 10px 20px;
+    }
 }
 
 .disabled-label {
