--- a/styles/sass/sf-additional.scss
+++ b/styles/sass/sf-additional.scss
@@ -1009,16 +1009,16 @@
 // ---------------------------------------------
 
 .sd-pagination {
-    padding: 10px 20px;
+    padding: 7px 20px;
     .btn {
         padding: 10px;
-        i {
-            margin-right: 0;
-        }
+        i { margin-right: 0; }
     }
     .page-info {
-        line-height: 28px;
+        line-height: 34px;
         margin-right: 20px;
+        display: inline-block;
+        vertical-align: middle;
         input {
             display: inline-block;
             width: 30px;
@@ -1029,6 +1029,14 @@
             margin: 0 5px;
             @include box-shadow(inset 0 5px 5px -5px #acacac);
         }
+    }
+    .btn-group, .btn-group > .btn {
+        display: inline-block;
+        vertical-align: middle;
+        float: none;
+    }
+    .btn-group > .btn + .btn {
+        margin-left: 0px;
     }
 }
 
